--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "league/csv": "^9.5"
+        "league/csv": "^9.5",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
